force-app/main/default/objects/Email_Notification_Setting__mdt/Email_Notification_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Maps a centralized email gateway emailType (CARAEmailGatewayService) to its Marketing Cloud Send Definition and attribute wrapper name. One record per DeveloperName = email type. Ships with the 8 Cara email types; Send_Definition_Id__c is left blank where the real id is not yet confirmed.</description>
    <label>Email Notification Setting</label>
    <pluralLabel>Email Notification Settings</pluralLabel>
</CustomObject>