force-app/main/default/objects/Email_Notification_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Unchecked for an email type that is not yet safe to send (e.g. missing Send_Definition_Id__c) — CARAEmailGatewayService refuses to call Marketing Cloud for an inactive/missing record.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>