force-app/main/default/objects/Email_Notification_Setting__mdt/fields/Attribute_Wrapper_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Wrapper_Name__c</fullName>
    <description>Name of the attributes wrapper key Marketing Cloud expects for this template, e.g. &quot;OrderConfirmationInput&quot;. Left blank for templates that use the &quot;$content&quot; attribute shape instead.</description>
    <label>Attribute Wrapper Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>