force-app/main/default/objects/Email_Notification_Setting__mdt/fields/Send_Definition_Id__c.field-meta.xml
<CustomField>
    <fullName>Send_Definition_Id__c</fullName>
    <description>Marketing Cloud sendDefinitionId used on the actions360/messaging/email/v1 callout for this email type. Never invented — left blank when not yet confirmed.</description>
    <label>Send Definition Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>